[gd_scene load_steps=2 format=3 uid="uid://bo7fjt2admiap"]

[ext_resource type="Script" uid="uid://c3vl7nl18l0q1" path="res://control.gd" id="1_62e2m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 267.0
offset_top = 110.0
offset_right = -188.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62e2m")

[node name="47a525Ce14744a115b14e484d0c1d1c2" type="Sprite2D" parent="."]
position = Vector2(311.5, 216.5)
scale = Vector2(1.63286, 1.6275)

[node name="Yes" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.5
offset_top = -27.0
offset_right = 245.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "NO"

[node name="No" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 111.0
offset_top = -23.0
offset_right = 311.0
offset_bottom = 25.0
grow_vertical = 2
text = "Yes"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 27.0
offset_right = 463.0
offset_bottom = 85.0
text = "Do you want to quit the game?"

[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
